fix: add overflow and width styles to ServicesTraveller for improved layout

--- a/client/src/components/ServicesPage/ServicesTraveller/ServicesTraveller.module.scss
+++ b/client/src/components/ServicesPage/ServicesTraveller/ServicesTraveller.module.scss
@@ -2,6 +2,9 @@
 @import "../../../styles/vars";
 
 .servicesTraveller {
+  overflow: hidden;
+  width: 100%;
+
   &__cardContainer {
     display: flex;
     flex-direction: column;
